--- a/05nextflow/nextflow.config
+++ b/05nextflow/nextflow.config
@@ -1,5 +1,12 @@
 // Nextflow配置文件
 
+// 参数定义
+params {
+    outdir = './results'
+    threads = 4
+    memory = '8 GB'
+}
+
 // 进程默认配置
 process {
     // 默认执行器
