--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -15,18 +15,24 @@ process {
     }
     
     withName: 'fastcall3_disc' {
-        cpus = 16      // Reduce from 32 to 16
-        memory = '64 GB' // Reduce from 100GB to 64GB
+        cpus = 16
+        memory = { 32.GB + (8.GB * task.attempt) }  // 动态内存，从32GB开始
+        errorStrategy = 'retry'
+        maxRetries = 3
     }
     
     withName: 'fastcall3_blib' {
         cpus = 8
-        memory = '32 GB'
+        memory = { 32.GB + (8.GB * task.attempt) }  // 动态内存，从32GB开始
+        errorStrategy = 'retry'
+        maxRetries = 3
     }
     
     withName: 'fastcall3_scan' {
         cpus = 16
-        memory = '64 GB'
+        memory = { 32.GB + (8.GB * task.attempt) }  // 动态内存，从32GB开始
+        errorStrategy = 'retry'
+        maxRetries = 3
     }
     
     withName: 'collect_results' {
@@ -38,8 +44,8 @@ process {
 // Executor configuration
 executor {
     name = 'local'
-    cpus = 96      // Update to actual system CPUs
-    memory = '1800 GB' // Update to actual system memory
+    cpus = 128      // Update to actual system CPUs
+    memory = '1280 GB' // Update to actual system memory
     queueSize = 15   // Increase queue size
 }
 
