--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -63,6 +63,7 @@ timeline {
 trace {
     enabled = true
     file = 'pipeline_info/execution_trace.txt'
+    overwrite = true  // 允许覆盖现有trace文件
 }
 
 dag {
