--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -5,8 +5,8 @@ process {
     executor = 'local'
     
     // Default resource allocation
-    cpus = 8       // Reduce default CPU usage
-    memory = '32 GB' // Reduce default memory usage
+    cpus = 4        // Keep light-weight defaults for helper processes
+    memory = '16 GB'
     
     // Specific process configurations
     withName: 'prepareTaxaBamMap' {
@@ -15,8 +15,9 @@ process {
     }
     
     withName: 'fastcall3_disc' {
-        cpus = 32
-        memory = { 128.GB + (32.GB * task.attempt) }  // 动态内存，从128GB开始
+        cpus = 16
+        memory = { 96.GB + (16.GB * task.attempt) }
+        maxForks = 8            // Limit concurrent disc tasks to ease I/O pressure
         errorStrategy = 'retry'
         maxRetries = 3
     }
@@ -44,9 +45,8 @@ process {
 // Executor configuration
 executor {
     name = 'local'
-    cpus = 128      // Update to actual system CPUs
-    memory = '960 GB' // Update to actual system memory
-    queueSize = 4   // Increase queue size
+    cpus = 128
+    memory = '1024 GB'
 }
 
 // Report configuration
@@ -64,6 +64,8 @@ trace {
     enabled = true
     file = 'pipeline_info/execution_trace.txt'
     overwrite = true  // 允许覆盖现有trace文件
+    // Enrich trace fields for performance benchmarking (CPU + IO)
+    fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
 }
 
 dag {
@@ -81,4 +83,59 @@ resume = true
 monitor {
     enabled = true
     interval = '5min'
+}
+
+// -------------------------------------------------------------
+// Benchmark profiles for fastcall3_disc process
+// Goal: Explore trade-offs between per-task CPU allocation and
+//       concurrency (maxForks) under a 128-core / 1TB host.
+// Keeping total theoretical cores (cpus * maxForks) <= 128 when possible.
+// Memory heuristic: ~6 GB per CPU (adjust as needed for data size).
+// -------------------------------------------------------------
+profiles {
+    disc_c8_f12 {
+        process {
+            withName: 'fastcall3_disc' {
+                cpus = 8
+                maxForks = 12   // 96 logical cores possible
+                memory = { 6.GB * task.cpus }
+            }
+        }
+    }
+    disc_c12_f10 {
+        process {
+            withName: 'fastcall3_disc' {
+                cpus = 12
+                maxForks = 10   // 120 cores
+                memory = { 6.GB * task.cpus }
+            }
+        }
+    }
+    disc_c16_f8 { // Baseline (original)
+        process {
+            withName: 'fastcall3_disc' {
+                cpus = 16
+                maxForks = 8    // 128 cores
+                memory = { 6.GB * task.cpus } // Dynamically scale, replaces fixed 96+ retry growth
+            }
+        }
+    }
+    disc_c24_f5 {
+        process {
+            withName: 'fastcall3_disc' {
+                cpus = 24
+                maxForks = 5    // 120 cores (taller tasks, fewer forks)
+                memory = { 6.GB * task.cpus }
+            }
+        }
+    }
+    disc_c32_f4 {
+        process {
+            withName: 'fastcall3_disc' {
+                cpus = 32
+                maxForks = 4    // 128 cores (very wide tasks)
+                memory = { 6.GB * task.cpus }
+            }
+        }
+    }
 }
