--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -15,7 +15,7 @@ process {
     }
     
     withName: 'fastcall3_disc' {
-        cpus = 16
+        cpus = { params.chr ? 16 : 64 }
         memory = { 96.GB + (16.GB * task.attempt) }
         maxForks = 8            // Limit concurrent disc tasks to ease I/O pressure
         errorStrategy = 'retry'
