--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -16,7 +16,8 @@ process {
     
     withName: 'fastcall3_disc' {
         cpus = { params.chr ? 64 : 16 }
-        memory = { 96.GB + (16.GB * task.attempt) }
+        // Memory scales with --chr similarly to CPUs (approx. 6 GB per CPU), plus retry growth
+        memory = { (params.chr ? 960.GB : 96.GB) + (16.GB * task.attempt) }
         maxForks = 8            // Limit concurrent disc tasks to ease I/O pressure
         errorStrategy = 'retry'
         maxRetries = 3
@@ -24,14 +25,16 @@ process {
     
     withName: 'fastcall3_blib' {
         cpus = 8
-        memory = { 32.GB + (8.GB * task.attempt) }  // 动态内存，从128GB开始
+        // 动态内存，按 --chr 条件扩展（例如单染色体时给更高基线）
+        memory = { (params.chr ? 64.GB : 32.GB) + (8.GB * task.attempt) }
         errorStrategy = 'retry'
         maxRetries = 3
     }
     
     withName: 'fastcall3_scan' {
         cpus = 32
-        memory = { 128.GB + (8.GB * task.attempt) }  // 动态内存，从128GB开始
+        // 动态内存，按 --chr 条件扩展（单染色体可给更高基线）
+        memory = { (params.chr ? 256.GB : 128.GB) + (8.GB * task.attempt) }
         errorStrategy = 'retry'
         maxRetries = 3
     }
