--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "nextflow.telemetry.enabled": true,
     "git.ignoreLimitWarning": true,
-    "r.lsp.promptToInstall": false
+    "r.lsp.promptToInstall": false,
+    "python.defaultInterpreterPath": "/data/dazheng/miniconda3/envs/stats/bin/python"
 }
