--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -23,15 +23,17 @@ process {
     }
     
     withName: 'fastcall3_blib' {
-        cpus = { params.chr ? 96 : 16 }
-        memory = { (params.chr ? 256.GB : 128.GB) + (8.GB * task.attempt) }
+        // On a 128 GB host, avoid exceeding physical memory; start conservative and tune if needed
+        cpus = { params.chr ? 32 : 16 }
+        memory = { params.chr ? 120.GB : 64.GB }
         errorStrategy = 'retry'
         maxRetries = 3
     }
     
     withName: 'fastcall3_scan' {
-        cpus = { params.chr ? 96 : 64 }
-        memory = { (params.chr ? 768.GB : 512.GB) + (128.GB * task.attempt) }
+        // Keep within 128 GB node; increase if OOM occurs
+        cpus = { params.chr ? 32 : 32 }
+        memory = { params.chr ? 120.GB : 96.GB }
         errorStrategy = 'retry'
         maxRetries = 3
     }
@@ -53,11 +55,13 @@ executor {
 report {
     enabled = true
     file = 'pipeline_info/execution_report.html'
+    overwrite = true
 }
 
 timeline {
     enabled = true
     file = 'pipeline_info/execution_timeline.html'
+    overwrite = true
 }
 
 trace {
