--- a/Association/genotype/nextflow.config
+++ b/Association/genotype/nextflow.config
@@ -8,29 +8,8 @@
  */
 
 params {
-  // Output base directory for genotype results
-  outdir = "results/genotype"
-
-  // --- Variant filtering ---
-  // Tool selector: 'bcftools' (default) or 'gatk'
-  filter_tool = 'bcftools'
-  // Optional restrict region like "chr1:1-100000"
-  region = null
-  // QUAL threshold (only applied when set; see assess.nf)
-  qual = 30
-  // MAF and missingness thresholds
-  filter_maf = 0.05
-  filter_geno = 0.10
-  // HWE threshold (currently not applied in bcftools step, placeholder)
-  filter_hwe = 1e-6
-
-  // --- Population structure ---
-  // Number of principal components to compute via plink2
-  pca_k = 5
-
-  // --- Optional genotype stats ---
-  // Enable bcftools stats on filtered VCF
-  enable_genotype_stats = false
+  home_dir = null
+  src_dir = null
 
   // Show help and exit
   help = false
@@ -41,52 +20,22 @@ process {
   cpus = 2
   memory = '8 GB'
 
-  withName: INDEX_VCF {
-    cpus = 1
-    memory = '2 GB'
-  }
-  withName: BCFTOOLS_FILTER {
-    cpus = 2
-    memory = '8 GB'
-  }
-  withName: GATK_FILTER {
-    cpus = 4
-    memory = '16 GB'
-  }
-  withName: KINSHIP_ANALYSIS {
-    cpus = 4
-    memory = '16 GB'
-  }
-  withName: POPULATION_STRUCTURE {
-    cpus = 4
-    memory = '16 GB'
-  }
-  withName: GENOTYPE_STATS {
-    cpus = 2
-    memory = '4 GB'
+  withName: vcf_to_plink {
+    cpus = 16
+    memory = 64.GB
   }
 }
 
 executor {
   name = 'local'
-  queueSize = 4
+  cpus = 64
+  memory = 512.GB
 }
 
-profiles {
-  standard {
-    process.cpus = 2
-    process.memory = '4 GB'
-  }
-  // Enable if you manage dependencies with Conda
-  // conda {
-  //   conda.enabled = true
-  //   // Provide your environment file path if available
-  //   // process.conda = "$baseDir/environment.yml"
-  // }
-  // Enable if you prefer Docker/Singularity
-  // docker {
-  //   docker.enabled = true
-  //   // process.container = 'your/container:tag'
-  // }
+trace {
+  enabled = true
+  file = 'pipeline_info/trace.txt'
+  fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
 }
 
+resume = true
