--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -35,42 +35,40 @@ process {
         errorStrategy = 'retry'
         maxRetries = 3
     }
-    
-    withName: 'collect_results' {
-        cpus = 8
-        memory = '256 GB'
-    }
 }
 
 // Executor configuration
 executor {
     name = 'local'
     cpus = 128
-    memory = '1024 GB'
+    memory = 1280.GB
 }
 
 // Report configuration
 report {
     enabled = true
     file = 'pipeline_info/execution_report.html'
+    overwrite = true
 }
 
 timeline {
     enabled = true
     file = 'pipeline_info/execution_timeline.html'
+    overwrite = true
 }
 
 trace {
     enabled = true
     file = 'pipeline_info/execution_trace.txt'
-    overwrite = true  // 允许覆盖现有trace文件
     // Enrich trace fields for performance benchmarking (CPU + IO)
     fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
+    overwrite = true
 }
 
 dag {
     enabled = true
     file = 'pipeline_info/pipeline_dag.svg'
+    overwrite = true
 }
 
 // Work directory cleanup
