--- a/Association/genotype/nextflow.config
+++ b/Association/genotype/nextflow.config
@@ -37,6 +37,7 @@ trace {
   enabled = true
   file = 'pipeline_info/trace.txt'
   fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
+  overwrite = true
 }
 
 resume = true
