--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -31,9 +31,10 @@ process {
     
     withName: 'fastcall3_scan' {
         cpus = { params.chr ? 96 : 64 }
-        memory = { (params.chr ? 768.GB : 512.GB) + (128.GB * task.attempt) }
-        errorStrategy = 'retry'
-        maxRetries = 3
+        memory = { (params.chr ? 768.GB : 640.GB) + (128.GB * task.attempt) }
+        errorStrategy = 'ignore'
+        // errorStrategy = 'retry'
+        // maxRetries = 3
     }
 }
 
