--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -32,9 +32,9 @@ process {
     withName: 'fastcall3_scan' {
         cpus = { params.chr ? 96 : 64 }
         memory = { (params.chr ? 768.GB : 640.GB) + (128.GB * task.attempt) }
-        errorStrategy = 'ignore'
-        // errorStrategy = 'retry'
-        // maxRetries = 3
+        // errorStrategy = 'ignore'
+        errorStrategy = 'retry'
+        maxRetries = 3
     }
 }
 
@@ -42,7 +42,7 @@ process {
 executor {
     name = 'local'
     cpus = 128
-    memory = 1280.GB
+    memory = 1536.GB
 }
 
 // Report configuration
