--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -36,13 +36,21 @@ process {
         // errorStrategy = 'retry'
         // maxRetries = 3
     }
+
+    withName: 'fastcall3_scan2' {
+        cpus = { params.chr ? 96 : 64 }
+        memory = { (params.chr ? 768.GB : 768.GB) + (128.GB * task.attempt) }
+        // errorStrategy = 'ignore'
+        errorStrategy = 'retry'
+        maxRetries = 3
+    }
 }
 
 // Executor configuration
 executor {
     name = 'local'
     cpus = 128
-    memory = 1536.GB
+    memory = 1792.GB
 }
 
 // Report configuration
