--- a/DataProcess/calling/run/nextflow.config
+++ b/DataProcess/calling/run/nextflow.config
@@ -40,9 +40,9 @@ process {
     withName: 'fastcall3_scan2' {
         cpus = { params.chr ? 96 : 64 }
         memory = { (params.chr ? 768.GB : 768.GB) + (128.GB * task.attempt) }
-        // errorStrategy = 'ignore'
-        errorStrategy = 'retry'
-        maxRetries = 3
+        errorStrategy = 'ignore'
+        // errorStrategy = 'retry'
+        // maxRetries = 3
     }
 }
 
