--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -12,6 +12,7 @@ params {
   // working directories
   home_dir = null
   src_dir = null
+  user_dir = null
   output_dir = null
   // working identifiers
   mod = null
@@ -31,8 +32,8 @@ params {
 
 process {
   // Global defaults
-  cpus = 2
-  memory = '8 GB'
+  cpus = 16
+  memory = '64 GB'
 
   withName: vcf_to_plink {
     cpus = 16
