--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -19,15 +19,21 @@ params {
   job = null
 
   // --- Optional Parameters ---
+  // output sub-directories
   process_dir = null
   filter_dir = null
   assess_dir = null
   stats_dir = null
   kinship_dir = null
   ps_dir = null
-  
+  // software parameters
+  genotype_tool = 'default'  // default: vcftools, bcftools, plink; or hail
+
   // Show help and exit
   help = false
+
+  // default parameters
+
 }
 
 process {
