--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -28,11 +28,35 @@ params {
   ps_dir = null
   // software parameters
 
+  // analysis parameters
+  pc_num = 10
+
   // Show help and exit
   help = false
 
   // default parameters
+  // reference genome
+  // --- VCF Filter Parameters ---
+  // standard filter parameters (std)
+  maf = 0.05
+  mac = 2
+  min_alleles = 2
+  max_alleles = 2
+  max_missing = 0.05
+  // additional parameters can be added here
+  qual = 30
+  hwe_pval = 1e-6
 
+  // --- Colors ---
+  c_reset  = "\033[0m";
+  c_dim    = "\033[2m";
+  c_black  = "\033[0;30m";
+  c_green  = "\033[0;32m";
+  c_yellow = "\033[0;33m";
+  c_blue   = "\033[0;34m";
+  c_purple = "\033[0;35m";
+  c_cyan   = "\033[0;36m";
+  c_white  = "\033[0;37m";
 }
 
 process {
