--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -31,6 +31,9 @@ params {
   // analysis parameters
   pc_num = 10
 
+  // job chromosome filter
+  chr = null
+
   // Show help and exit
   help = false
 
@@ -61,19 +64,19 @@ params {
 
 process {
   // Global defaults
-  cpus = 16
+  cpus = 32
   memory = '64 GB'
 
   withName: vcf_to_plink {
-    cpus = 16
+    cpus = 32
     memory = 64.GB
   }
 }
 
 executor {
   name = 'local'
-  cpus = 64
-  memory = 512.GB
+  cpus = 128
+  memory = 1536.GB
 }
 
 trace {
