--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -26,7 +26,12 @@ params {
   stats_dir = null
   kinship_dir = null
   ps_dir = null
+  
+  // --- Pipeline Control ---
   // software parameters
+
+  // subsampling rate for testing
+  thin_rate = 0.001
 
   // analysis parameters
   pc_num = 10
