--- a/environment_tiger.yml
+++ b/environment_tiger.yml
@@ -1,4 +1,4 @@
-name: 
+name: tiger
 channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/pytorch
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/bioconda
