--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -68,6 +68,8 @@ params {
 }
 
 process {
+  executor = 'local'
+
   // Global defaults
   cpus = 32
   memory = '64 GB'
@@ -76,23 +78,82 @@ process {
     cpus = 32
     memory = 64.GB
   }
+
+  // Specific process configurations
+  withName: 'prepareTaxaBamMap' {
+      cpus = 4
+      memory = '16 GB'
+  }
+  
+  withName: 'fastcall3_disc' {
+      cpus = { params.chr ? 96 : 16 }
+      memory = { (params.chr ? 256.GB : 96.GB) + (16.GB * task.attempt) }
+      maxForks = 8            // Limit concurrent disc tasks to ease I/O pressure
+      errorStrategy = 'retry'
+      maxRetries = 3
+  }
+  
+  withName: 'fastcall3_blib' {
+      cpus = { params.chr ? 96 : 16 }
+      memory = { (params.chr ? 256.GB : 128.GB) + (8.GB * task.attempt) }
+      errorStrategy = 'retry'
+      maxRetries = 3
+  }
+  
+  withName: 'fastcall3_scan' {
+      cpus = { params.chr ? 96 : 64 }
+      memory = { (params.chr ? 768.GB : 640.GB) + (128.GB * task.attempt) }
+      errorStrategy = 'ignore'
+      // errorStrategy = 'retry'
+      // maxRetries = 3
+  }
+
+  withName: 'fastcall3_scan2' {
+      cpus = { params.chr ? 32 : 96 }
+      memory = { (params.chr ? 1408.GB : 1152.GB) + (128.GB * task.attempt) }
+      errorStrategy = 'ignore'
+      // errorStrategy = 'retry'
+      // maxRetries = 3
+  }
 }
 
 executor {
   name = 'local'
   cpus = 128
-  memory = 1536.GB
+  memory = 1792.GB
+}
+
+report {
+    enabled = true
+    file = 'pipeline_info/execution_report.html'
+    overwrite = true
+}
+
+timeline {
+    enabled = true
+    file = 'pipeline_info/execution_timeline.html'
+    overwrite = true
 }
 
 trace {
   enabled = true
-  file = 'pipeline_info/trace.txt'
+  file = 'pipeline_info/execution_trace.txt'
   fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
   overwrite = true
 }
 
-conda.enabled = true
-conda.autoMounts = true
-conda.runOptions = '--quiet'
+dag {
+    enabled = true
+    file = 'pipeline_info/pipeline_dag.svg'
+    overwrite = true
+}
 
+// Work directory cleanup
+cleanup = false  // Keep work directory for debugging
+
+// Resume configuration
 resume = true
+
+// Conda configuration
+conda.enabled = true
+
