--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -69,12 +69,12 @@ params {
 
 process {
   executor = 'local'
-
-  // Global defaults
-  cpus = 32
-  memory = '64 GB'
-
-  withName: vcf_to_plink {
+  // Default resource allocation
+  cpus = 8
+  memory = 64.GB
+  
+  // Label-based overrides
+  withLabel: cpus_32 {
     cpus = 32
     memory = 64.GB
   }
