--- a/workflow/Genetics/nextflow.config
+++ b/workflow/Genetics/nextflow.config
@@ -8,119 +8,138 @@
  */
 
 params {
-  // --- Required Parameters ---
-  // working directories
-  home_dir = null
-  src_dir = null
-  user_dir = null
-  output_dir = null
-  // working identifiers
-  mod = null
-  job = null
+    // --- Required Parameters ---
+    // working directories
+    home_dir = null
+    src_dir = null
+    user_dir = null
+    output_dir = null
+    // working identifiers
+    mod = null
+    job = null
+    server = null
 
-  // --- Optional Parameters ---
-  // output sub-directories
-  process_dir = null
-  filter_dir = null
-  assess_dir = null
-  stats_dir = null
-  kinship_dir = null
-  ps_dir = null
-  
-  // --- Pipeline Control ---
-  // software parameters
+    // --- Optional Parameters ---
+    // output sub-directories
+    process_dir = null
+    filter_dir = null
+    assess_dir = null
+    stats_dir = null
+    kinship_dir = null
+    ps_dir = null
 
-  // subsampling rate for testing
-  thin_rate = 0.001
+    // --- Pipeline Control ---
+    // software parameters
+    // caller parameters
+    ing_dir = null
+    vlib_dir = null
+    gen_dir = null
+    gen_tbm = null  // server name for taxaBamMap generation
+    tiger_jar = "TIGER_F3_20251121.jar"
+    workshop_jar = "Workshop.jar"
+    samtools = "samtools"
+    // FastCall3 disc parameters
+    disc_min_MQ = 30
+    disc_min_BQ = 20
+    disc_min_DC = 2
+    disc_min_DR = 0.2
+    disc_max_DR = 3
+    disc_HoR = 0.8
+    disc_HeR = 0.35
+    disc_TDR = 0.2
+    // FastCall3 blib parameters
+    blib_MAO = 2
+    // FastCall3 scan parameters
+    scan_min_MQ = 30
+    scan_min_BQ = 20
+    scan_error_rate = 0.05
 
-  // analysis parameters
-  pc_num = 10
+    // subsampling rate for testing
+    thin_rate = 0.001
 
-  // job chromosome filter
-  chr = null
+    // analysis parameters
+    pc_num = 10
 
-  // Show help and exit
-  help = false
+    // job chromosome filter
+    chr = null
 
-  // default parameters
-  // reference genome
-  // --- VCF Filter Parameters ---
-  // standard filter parameters (std)
-  maf = 0.05
-  mac = 2
-  min_alleles = 2
-  max_alleles = 2
-  max_missing = 0.05
-  // additional parameters can be added here
-  qual = 30
-  hwe_pval = 1e-6
+    // Show help and exit
+    help = false
 
-  // --- Colors ---
-  c_reset  = "\033[0m";
-  c_dim    = "\033[2m";
-  c_black  = "\033[0;30m";
-  c_green  = "\033[0;32m";
-  c_yellow = "\033[0;33m";
-  c_blue   = "\033[0;34m";
-  c_purple = "\033[0;35m";
-  c_cyan   = "\033[0;36m";
-  c_white  = "\033[0;37m";
+    // default parameters
+    // reference genome
+    // --- VCF Filter Parameters ---
+    // standard filter parameters (std)
+    maf = 0.05
+    mac = 2
+    min_alleles = 2
+    max_alleles = 2
+    max_missing = 0.05
+    // additional parameters can be added here
+    qual = 30
+    hwe_pval = 1e-6
+
+    // --- Colors ---
+    c_reset  = "\033[0m";
+    c_dim    = "\033[2m";
+    c_black  = "\033[0;30m";
+    c_green  = "\033[0;32m";
+    c_yellow = "\033[0;33m";
+    c_blue   = "\033[0;34m";
+    c_purple = "\033[0;35m";
+    c_cyan   = "\033[0;36m";
+    c_white  = "\033[0;37m";
 }
 
 process {
-  executor = 'local'
-  // Default resource allocation
-  cpus = 8
-  memory = 64.GB
-  
-  // Label-based overrides
-  withLabel: cpus_32 {
-    cpus = 32
+    executor = 'local'
+    // Default resource allocation
+    cpus = 8
     memory = 64.GB
-  }
+    errorStrategy = 'ignore'
 
-  // Specific process configurations
-  withName: 'prepareTaxaBamMap' {
-      cpus = 4
-      memory = '16 GB'
-  }
+    // Label-based overrides
+    withLabel: cpus_32 {
+        cpus = 32
+        memory = 64.GB
+    }
   
-  withName: 'fastcall3_disc' {
-      cpus = { params.chr ? 96 : 16 }
-      memory = { (params.chr ? 256.GB : 96.GB) + (16.GB * task.attempt) }
-      maxForks = 8            // Limit concurrent disc tasks to ease I/O pressure
-      errorStrategy = 'retry'
-      maxRetries = 3
-  }
-  
-  withName: 'fastcall3_blib' {
-      cpus = { params.chr ? 96 : 16 }
-      memory = { (params.chr ? 256.GB : 128.GB) + (8.GB * task.attempt) }
-      errorStrategy = 'retry'
-      maxRetries = 3
-  }
-  
-  withName: 'fastcall3_scan' {
-      cpus = { params.chr ? 96 : 64 }
-      memory = { (params.chr ? 768.GB : 640.GB) + (128.GB * task.attempt) }
-      errorStrategy = 'ignore'
-      // errorStrategy = 'retry'
-      // maxRetries = 3
-  }
+    withLabel: 'fastcall3_disc' {
+        cpus = { params.chr ? 96 : 16 }
+        memory = { (params.chr ? 256.GB : 96.GB) + (16.GB * task.attempt) }
+        maxForks = 8            // Limit concurrent disc tasks to ease I/O pressure
+        errorStrategy = 'retry'
+        maxRetries = 3
+    }
 
-  withName: 'fastcall3_scan2' {
-      cpus = { params.chr ? 32 : 96 }
-      memory = { (params.chr ? 1408.GB : 1152.GB) + (128.GB * task.attempt) }
-      errorStrategy = 'ignore'
-      // errorStrategy = 'retry'
-      // maxRetries = 3
-  }
+    withLabel: 'fastcall3_blib' {
+        cpus = { params.chr ? 96 : 16 }
+        memory = { (params.chr ? 256.GB : 128.GB) + (8.GB * task.attempt) }
+        errorStrategy = 'retry'
+        maxRetries = 3
+    }
+
+    withLabel: 'fastcall3_scan' {
+        cpus = { params.chr ? 96 : 64 }
+        memory = { (params.chr ? 768.GB : 640.GB) + (128.GB * task.attempt) }
+        errorStrategy = 'ignore'
+        // errorStrategy = 'retry'
+        // maxRetries = 3
+    }
+
+    withLabel: 'fastcall3_scan2' {
+        cpus = { params.chr ? 32 : 96 }
+        memory = { (params.chr ? 1408.GB : 1152.GB) + (128.GB * task.attempt) }
+        errorStrategy = 'ignore'
+        // errorStrategy = 'retry'
+        // maxRetries = 3
+    }
 }
 
 executor {
-  name = 'local'
-  cpus = 128
-  memory = 1792.GB
+    name = 'local'
+    cpus = 128
+    memory = 1792.GB
 }
 
 report {
@@ -136,10 +155,10 @@ timeline {
 }
 
 trace {
-  enabled = true
-  file = 'pipeline_info/execution_trace.txt'
-  fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
-  overwrite = true
+    enabled = true
+    file = 'pipeline_info/execution_trace.txt'
+    fields = 'task_id,hash,name,tag,status,exit,cpus,memory,attempt,duration,realtime,%cpu,%mem,rss,peak_rss,vmem,peak_vmem,read_bytes,write_bytes,submit,start,complete'
+    overwrite = true
 }
 
 dag {
