--- a/environment_stats_r.yml
+++ b/environment_stats_r.yml
@@ -32,3 +32,7 @@ dependencies:
   # Cross-language collaboration (optional)
   - r-reticulate    # For calling Python scripts from R
 
+# 1. can be created with:
+# conda env create -f environment_stats_r.yml
+# 2. or update an existing environment with:
+# conda env update -f environment_stats_r.yml
