--- a/environment_stats.yml
+++ b/environment_stats.yml
@@ -15,6 +15,7 @@ dependencies:
   - bcftools
   - vcftools
   - bedtools
+  - numpy
   - pip
   - pip:
       - hail   # Conda environment pip fine-grained installation
