--- a/environment_stats_115.yml
+++ b/environment_stats_115.yml
@@ -5,6 +5,10 @@ channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free
 dependencies:
+  # compilers
+  - gxx_linux-64
+  - gcc_linux-64
+  # code languages
   - python=3.12
   - openjdk=11  # Hail JDK requirement
   - seqkit
