--- a/environment_stats_115.yml
+++ b/environment_stats_115.yml
@@ -23,6 +23,11 @@ dependencies:
   # pip packages
   - pip
   - pip:
+      - numpy
+      - pandas
+      - scipy
+      - scikit-learn
+      - matplotlib
       - hail   # Conda environment pip fine-grained installation
       - -e .   # Editable install of your own python_script package
 
