--- a/environment_stats_115.yml
+++ b/environment_stats_115.yml
@@ -5,13 +5,17 @@ channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free
 dependencies:
+
   # compilers
   - gxx_linux-64
   - gcc_linux-64
   - gfortran_linux-64
-  # code languages
+
+  # code languages environment
   - python=3.12
   - openjdk=11  # Hail JDK requirement
+
+  # bioinformatics tools
   - seqkit
   - fastqc
   - plink
@@ -20,16 +24,29 @@ dependencies:
   - bcftools
   - vcftools
   - bedtools
+
+  # math libraries
+  - hdf5
+  - h5py
+
   # complex environment solving python packages
   - numpy
   - pandas
   - scipy
   - scikit-learn
   - matplotlib
+  - seaborn
+  - statsmodels
+  - scanpy
+
   # pip packages
   - pip
   - pip:
       - hail   # Conda environment pip fine-grained installation
+      - cookiecutter
+      - fastcluster
+      - PyYAML
+      - upsetplot
       - -e .   # Editable install of your own python_script package
 
 # 1. can be created with:
