--- a/environment_stats_115.yml
+++ b/environment_stats_115.yml
@@ -4,12 +4,15 @@ channels:
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/cloud/conda-forge
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/main
   - https://mirrors.tuna.tsinghua.edu.cn/anaconda/pkgs/free
+  - defaults
 dependencies:
 
   # compilers
   - gxx_linux-64
   - gcc_linux-64
   - gfortran_linux-64
+  - cmake
+  - pkg-config
 
   # code languages environment
   - python=3.12
@@ -38,14 +41,14 @@ dependencies:
   - seaborn
   - statsmodels
   - scanpy
+  - fastcluster
+  - PyYAML
 
   # pip packages
   - pip
   - pip:
       - hail   # Conda environment pip fine-grained installation
       - cookiecutter
-      - fastcluster
-      - PyYAML
       - upsetplot
       - -e .   # Editable install of your own python_script package
 
